--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -62,7 +62,7 @@
                     </bold>
                 </div>
                 <div
-                    class="alert alert-info"
+                    class="alert alert-warning"
                     role="alert"
                     style="margin-bottom:0px;"
                     attrs="{'invisible': [('partner_incongruences','=',False)]}"
