--- a/pms/report/pms_folio.xml
+++ b/pms/report/pms_folio.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-        <report
-            id="action_report_folio"
-            string="Folio"
-            model="pms.folio"
-            report_type="qweb-pdf"
-            file="pms.report_folio"
-            name="pms.report_folio"
-            print_report_name="(object.state in ('draft', 'sent') and 'Quotation - %s' % (object.name)) or 'Order - %s' % (object.name)"
-        />
+        <record id="action_report_folio" model="ir.actions.report">
+            <field name="name">Report Folio</field>
+            <field name="model">pms.folio</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">pms.report_folio</field>
+            <field name="report_file">pms.report_folio</field>
+            <field
+                name="print_report_name"
+            >(object.state in ('draft', 'sent') and 'Quotation - %s' % (object.name)) or 'Order - %s' % (object.name)</field>
+        </record>
     </data>
 </odoo>
