[IMP] pms: add partner view when there are incongruences with checkin partner

--- a/pms/views/res_partner_views.xml
+++ b/pms/views/res_partner_views.xml
@@ -93,6 +93,44 @@
             </xpath>
         </field>
     </record>
+    <record id="view_partner_data_form" model="ir.ui.view">
+            <field name="name">res.partner.form.data</field>
+            <field name="model">res.partner</field>
+            <field name="priority" eval="20" />
+            <field name="arch" type="xml">
+                <form string="Partner">
+                    <field
+                    name="image_1920"
+                    widget='image'
+                    class="oe_avatar"
+                    options='{"preview_image": "image_128"}'
+                    readonly="1"
+                />
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" readonly="1" />
+                        </h1>
+                    </div>
+                    <group>
+                        <group name="group_top">
+                        <group name="group_left">
+
+                            <field name="firstname" />
+                            <field name="lastname" />
+                            <field name="lastname2" />
+                            <field name="gender" />
+                            <field name="birthdate_date" />
+                            <field name="id_numbers" />
+                            <field name="nationality_id" />
+                            <field name="email" />
+                            <field name="mobile" />
+
+                        </group>
+                    </group>
+                    </group>
+                </form>
+            </field>
+        </record>
     <menuitem
         id="pms_customer_meu"
         name="Customers"
