[REF]pms: Refactor computes of partner_id, partner_name, email and mobile in folio and reservation

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -304,13 +304,13 @@
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
                             />
                             <field
-                                name="partner_email"
+                                name="email"
                                 placeholder="email"
                                 widget="email"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
                             />
                             <field
-                                name="partner_mobile"
+                                name="mobile"
                                 placeholder="mobile"
                                 widget="phone"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
