--- a/pms_l10n_es/wizards/wizard_ine.xml
+++ b/pms_l10n_es/wizards/wizard_ine.xml
@@ -7,6 +7,11 @@
             <form>
                 <div class="row">
                     <div class="col-6">
+                       <group>
+                           <field name="pms_property_id" />
+                       </group>
+                   </div>
+                    <div class="col-6">
                         <group>
                             <field
                                 name="start_date"
@@ -20,25 +25,40 @@
                             />
                         </group>
                     </div>
-                   <div class="col-6">
-                       <group>
-                           <field name="pms_property_id" />
-                       </group>
-                   </div>
                 </div>
-                <group>
-                    <field name="txt_filename" />
-                    <field name="txt_message" />
-                    <field name="txt_binary" filename="txt_filename" readonly="1" />
-                </group>
-                <div class="col-3">
+                <div class="row">
+                    <div class="col-6">
+                        <group>
+                            <field name="txt_filename" invisible="1" />
+                            <field
+                                name="txt_binary"
+                                filename="txt_filename"
+                                readonly="1"
+                                attrs="{'invisible': [('txt_filename','=', False)]}"
+                            />
+                        </group>
+                    </div>
+                    <div class="col-6">
+                        <group>
+                            <field
+                                name="adr"
+                                attrs="{'invisible': [('txt_filename','=', False)]}"
+                                readonly="1"
+                            />
+                            <field
+                                name="revpar"
+                                attrs="{'invisible': [('txt_filename','=', False)]}"
+                                readonly="1"
+                            />
+                        </group>
+                    </div>
+                </div>
                     <button
-                        name="generate_ine_file"
-                        class="btn btn-primary btn-sm"
-                        type="object"
-                        string="Preview file"
-                    />
-                </div>
+                    name="ine_generate_xml"
+                    class="btn btn-primary btn-sm"
+                    type="object"
+                    string="Generate INE XML"
+                />
                 <footer />
             </form>
         </field>
