[IMP] pms: add general info to property view

--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -14,7 +14,38 @@
                     <notebook>
                         <page string="General Information" name="property_general">
                             <group>
-
+                                <div class="o_address_format">
+                                    <field
+                                        name="street"
+                                        placeholder="Street..."
+                                        class="o_address_street"
+                                    />
+                                    <field
+                                        name="street2"
+                                        placeholder="Street 2..."
+                                        class="o_address_street"
+                                    />
+                                    <field
+                                        name="city"
+                                        placeholder="City"
+                                        class="o_address_city"
+                                    />
+                                    <field
+                                        name="state_id"
+                                        class="o_address_state"
+                                        placeholder="State"
+                                    />
+                                    <field
+                                        name="zip"
+                                        placeholder="ZIP"
+                                        class="o_address_zip"
+                                    />
+                                    <field
+                                        name="country_id"
+                                        placeholder="Country"
+                                        class="o_address_country"
+                                    />
+                                </div>
                             </group>
                         </page>
                         <page string="Settings" name="property_settings">
