[ADD] state_id on checkin partner

--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -53,6 +53,7 @@
                             <field name="document_number" />
                             <field name="document_expedition_date" />
                             <field name="nationality_id" />
+                            <field name="state_id" />
                             <field name="email" />
                             <field name="mobile" />
                             <field name="document_id" invisible="1" />
@@ -111,6 +112,7 @@
                 <field name="document_number" />
                 <field name="document_expedition_date" />
                 <field name="nationality_id" />
+                <field name="state_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -156,6 +158,7 @@
                 <field name="document_number" />
                 <field name="document_expedition_date" />
                 <field name="nationality_id" />
+                <field name="state_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" invisible="1" />
@@ -198,6 +201,7 @@
                 <field name="document_number" />
                 <field name="document_expedition_date" />
                 <field name="nationality_id" />
+                <field name="state_id" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -236,6 +240,7 @@
                 <field name="document_number" />
                 <field name="document_expedition_date" />
                 <field name="nationality_id" />
+                <field name="state_id" />
                 <field name="email" />
                 <field name="mobile" />
                 <field name="arrival" />
