[IMP] pms: add board service option in wizard folio changes

--- a/pms/wizards/wizard_folio_changes.xml
+++ b/pms/wizards/wizard_folio_changes.xml
@@ -99,6 +99,7 @@
                         <group>
                             <field name="new_price" />
                             <field name="new_discount" />
+                            <field name="new_board_service_id" />
                         </group>
                     </div>
                 </div>
