--- a/pms/wizards/pms_booking_engine_views.xml
+++ b/pms/wizards/pms_booking_engine_views.xml
@@ -128,6 +128,15 @@
                         </group>
                     </div>
                 </div>
+                <div>
+                    <group>
+                        <field
+                            name="internal_comment"
+                            placeholder="Internal comment Folio"
+                            nolabel="1"
+                        />
+                    </group>
+                </div>
                 <div class="row float-right border mr-2 mb-5">
                     <div class="col-3 ">
                         <group>
